--- a/src/ru/geekbrains/java2/lesson_06/Classwork/client/sample.fxml
+++ b/src/ru/geekbrains/java2/lesson_06/Classwork/client/sample.fxml
@@ -1,4 +1,14 @@
-<?import javafx.scene.layout.GridPane?>
-<GridPane fx:controller="ru.geekbrains.java2.lesson_06.Classwork.client.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<VBox fx:controller="ru.geekbrains.java2.lesson_06.Classwork.client.Controller"
+      xmlns:fx="http://javafx.com/fxml">
+    <TextArea fx:id="chatArea" editable="false" VBox.vgrow="ALWAYS"/>
+    <HBox>
+        <TextField fx:id="msgField" promptText="Введите сообщение..."
+                   HBox.hgrow="ALWAYS" onAction="#sendMsg"/>
+        <Button fx:id="sendButton" text="Отправить" onAction="#sendMsg"/>
+    </HBox>
+</VBox>
